Changelog
=========

1.10 - Unreleased
-----------------

* By setting ``always-checkout = force``, all packages will be updated
  without asking when dirty.
  [fschulze]

* The ``[path]`` part of sources is replaced by ``path=PATH`` syntax and
  throws a warning when used.
  [fschulze]

* Per package options are now allowed before the URL.
  [fschulze]

* Check ``svn`` version and output helpful error messages if it's too old or
  can't be determined (Issue #13).
  [fschulze]

* Error messages instead of tracebacks when source definitions are wrong.
  [fschulze]

* Fix checkout of packages (Issues #9 and #11).
  [fschulze]

* Possibility to checkout/update tags instead of HEAD in CVS
  [sargo]

* Tests for CVS integration
  [sargo]

* Better checking of CVS package purity.
  [sargo]

1.9 - 2010-01-11
----------------

* Added dry-run option to ``purge`` command.
  [fschulze]

* Fix purging on windows.
  [kleist]

* Fix compatibility with Python < 2.6.
  [fschulze, vincentfretin]

* Fix `all` answer for ``update`` command.
  [fschulze]

1.8 - 2010-01-10
----------------

* Added threading for parallel checkouts.
  [fschulze, jensens]

* Ask whether to update dirty packages during checkout.
  [fschulze]

* When you answered `yes` when asked whether to update a dirty package, then
  all further questions had been answered with `yes` as well, this is now
  fixed.
  [fschulze]

* Added `all` option when asked to update dirty packages.
  [fschulze]

* Added help for all commands to PyPI description.
  [fschulze]

* Added option to ``help`` command which outputs the help for all commands in
  reStructuredText format.
  [fschulze]

* Don't abort after user answered `no` on whether to update a package, just
  skip that package.
  [fschulze]

1.7 - 2009-11-26
----------------

* Fix a problem where a package wasn't added to the develop packages on auto
  checkout.
  [fschulze]

1.6 - 2009-11-21
----------------
